fix overflowing

--- a/src/checkout/styles.css
+++ b/src/checkout/styles.css
@@ -28,8 +28,6 @@ body {
   padding: 0;
   margin: 0;
   min-height: 100vh;
-  height: 100%;
-  overflow: hidden;
 }
 
 p {
