--- a/src/decide/styles.css
+++ b/src/decide/styles.css
@@ -21,8 +21,6 @@ html {
 body {
   padding: 0;
   margin: 0;
-  height: 100%;
-  overflow: hidden;
 }
 
 p {
